<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <!-- Ana Sayfa -->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ibadetapp.ui.main.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- Kuran -->
    <fragment
        android:id="@+id/navigation_quran"
        android:name="com.ibadetapp.ui.quran.QuranListFragment"
        android:label="@string/title_quran"
        tools:layout="@layout/fragment_quran_list">

        <action
            android:id="@+id/action_navigation_quran_to_surahDetailFragment"
            app:destination="@id/surahDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/surahDetailFragment"
        android:name="com.ibadetapp.ui.quran.SurahDetailFragment"
        android:label="{surahName}"
        tools:layout="@layout/fragment_surah_detail">

        <argument
            android:name="surahNumber"
            app:argType="integer" />
        <argument
            android:name="surahName"
            app:argType="string" />
    </fragment>

    <!-- Zikir -->
    <fragment
        android:id="@+id/navigation_zikir"
        android:name="com.ibadetapp.ui.zikir.ZikirListFragment"
        android:label="@string/title_zikir"
        tools:layout="@layout/fragment_zikir_list">

        <action
            android:id="@+id/action_navigation_zikir_to_zikirCounterFragment"
            app:destination="@id/zikirCounterFragment" />
    </fragment>

    <fragment
        android:id="@+id/zikirCounterFragment"
        android:name="com.ibadetapp.ui.zikir.ZikirCounterFragment"
        android:label="Zikir Sayacı"
        tools:layout="@layout/fragment_zikir_counter" />

    <!-- Yer İmleri -->
    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.ibadetapp.ui.main.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

</navigation>
